# brew

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
src/: CMakeLists.txt
src/brew/application/: Application.cpp  Application.h  ApplicationListener.h  CMakeLists.txt  DesktopApplicationConfig.h
src/brew/application/android/: AndroidApplication.cpp  AndroidApplication.h  CMakeLists.txt
src/brew/application/linux/: CMakeLists.txt  LinuxApplication.cpp  LinuxApplication.h
src/brew/asset/: AbstractAssetManager.cpp  AbstractAssetManager.h  AssetBundle.h  AssetManager.cpp  AssetManager.h  AssetPipeline.cpp  AssetPipeline.h  AssetProcessor.cpp  AssetProcessor.h  AssetPromise.cpp  AssetPromise.h  CMakeLists.txt
src/brew/asset/core/: BitmapFontProcessor.cpp  BitmapFontProcessor.h  CMakeLists.txt  CoreAssetProcessors.cpp  CoreAssetProcessors.h  JSONProcessor.cpp  JSONProcessor.h  PixmapProcessor.cpp  PixmapProcessor.h  TextureAtlasProcessor.cpp  TextureAtlasProcessor.h  TextureProcessor.cpp  TextureProcessor.h
src/brew/asset/core/json/: README.txt
src/brew/asset/core/stb/: README.txt
src/brew/asset/tests/: AssetBundle.cpp  AssetManager.cpp  CMakeLists.txt
src/brew/core/: AbstractBuffer.cpp  AbstractBuffer.h  Animation.h  AppContext.cpp  AppContext.h  BuildInfo.h  CMakeLists.txt  Counter.cpp  Counter.h  EventSource.h  Exception.cpp  Exception.h  HeapBuffer.cpp  HeapBuffer.h  Interpolator.h  Log.cpp  Log.h  Object.cpp  Object.h  ProxyObjectManager.h  Rect.h  RingBuffer.h  String.cpp  String.h  StringBuffer.cpp  StringBuffer.h  SystemInfo.cpp  SystemInfo.h  Timer.cpp  Timer.h  Tree.h  Types.h
src/brew/core/android/: AndroidSystemInfo.h
src/brew/core/linux/: LinuxSystemInfo.h
src/brew/core/tests/: CMakeLists.txt  buffer.cpp  proxymanager.cpp  systeminfo.cpp  tree.cpp
src/brew/fileio/: CMakeLists.txt  Directory.h  File.h  FileStream.cpp  FileStream.h  HeapFileSystem.cpp  HeapFileSystem.h  LocalFileSystem.cpp  LocalFileSystem.h  VirtualFileSystem.cpp  VirtualFileSystem.h
src/brew/fileio/tests/: CMakeLists.txt  vfs.cpp
src/brew/input/: CMakeLists.txt  InputDevice.cpp  InputDevice.h  InputManager.cpp  InputManager.h  KeySym.cpp  KeySym.h
src/brew/input/linux/: CMakeLists.txt  X11InputManager.cpp  X11InputManager.h
src/brew/math/: BoundingBox.cpp  BoundingBox.h  CMakeLists.txt  Math.cpp  Math.h  Matrix4.cpp  Matrix4.h  Plane.cpp  Plane.h  Quaternion.cpp  Quaternion.h  Scale2D.cpp  Scale2D.h  Vec2.cpp  Vec2.h  Vec3.cpp  Vec3.h  Vec4.cpp  Vec4.h
src/brew/math/tests/: CMakeLists.txt  MathTest.cpp  QuaternionTest.cpp
src/brew/scene/: Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  SceneNode.cpp  SceneNode.h  Transform.cpp  Transform.h
src/brew/state/: CMakeLists.txt  State.cpp  State.h  StateSequence.cpp  StateSequence.h
src/brew/state/tests/: CMakeLists.txt  Sequence.cpp
src/brew/ui/: CMakeLists.txt  UIRenderer.cpp  UIRenderer.h
src/brew/video/: BitmapFont.cpp  BitmapFont.h  CMakeLists.txt  Camera.cpp  Camera.h  Color.cpp  Color.h  Decal.cpp  Decal.h  ExtendViewport.cpp  ExtendViewport.h  Font.cpp  Font.h  FrameBuffer.cpp  FrameBuffer.h  Frustum.cpp  Frustum.h  GPUBuffer.cpp  GPUBuffer.h  GPUExecutionContext.cpp  GPUExecutionContext.h  IndexBuffer.cpp  IndexBuffer.h  Mesh.cpp  Mesh.h  NativeViewport.cpp  NativeViewport.h  OrthoCamera.cpp  OrthoCamera.h  PerspectiveCamera.cpp  PerspectiveCamera.h  Pixmap.cpp  Pixmap.h  PixmapAtlas.cpp  PixmapAtlas.h  RenderBatch.cpp  RenderBatch.h  RenderSettings.cpp  RenderSettings.h  RenderTarget.cpp  (+29 more)
src/brew/video/gl/: CMakeLists.txt  GLCanvas.cpp  GLCanvas.h  GLContext.cpp  GLContext.h  GLExtensions.cpp  GLExtensions.h  GLFrameBuffer.cpp  GLFrameBuffer.h  GLGPUExecutionContext.cpp  GLGPUExecutionContext.h  GLIndexBuffer.cpp  GLIndexBuffer.h  GLMesh.cpp  GLMesh.h  GLObject.cpp  GLObject.h  GLShader.cpp  GLShader.h  GLShaderProgram.cpp  GLShaderProgram.h  GLShaderVariables.cpp  GLShaderVariables.h  GLStateInfo.h  GLTexture.cpp  GLTexture.h  GLVertexBuffer.cpp  GLVertexBuffer.h
src/brew/video/gl/tests/: CMakeLists.txt  FrameBuffer.cpp  GLContextTest.cpp  GLContextTest.h  IndexBuffer.cpp  Mesh.cpp  Shaders.cpp  VertexBuffer.cpp
src/brew/video/linux/: CMakeLists.txt  GLXCanvas.cpp  GLXCanvas.h  X11Canvas.cpp  X11Canvas.h
src/brew/video/linux/tests/: CMakeLists.txt
src/brew/video/tests/: CMakeLists.txt  ShaderVariables.cpp  VertexAttribute.cpp
src/cmake/: TestsMain.cpp  brew.cmake  brew_test.cmake
src/cmake/Modules/: FindBREW.cmake
src/cmake/Toolchains/: android.toolchain.cmake
src/samples/: CMakeLists.txt
src/samples/00-simple-application/: CMakeLists.txt  main.cpp
src/samples/common/: SampleConfig.h.in  sample.cmake
src/samples/sprites/: CMakeLists.txt  SampleConfig.h.in  SpritesSample.cpp  sample.png.LICENSE.md
